--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -1,5 +1,4 @@
 <%= stylesheet_link_tag "home" %>
-
 <!--Hero Section-->
 
 <div class="hero">
@@ -21,7 +20,7 @@
 </div>
 
 <!--Content 1 Section-->
-
+<section>
 <div class = "content_1">
     <%= image_tag("abstract/slime.svg", :alt => "slime", :class => "slime", :id => "slime-1", :draggable => "false") %>
     <%= image_tag("abstract/slime.svg", :alt => "slime", :class => "slime", :id => "slime-2", :draggable => "false") %>
@@ -48,10 +47,10 @@
         </div>
     </div>
 </div>
-
+</section>
 
 <!--Content 2 Section-->
-
+<section>
 <div class = "content_2">
     <%= image_tag("abstract/divider.svg", :alt => "divider", :class => "divider", :draggable => "false") %>
     <%= image_tag("abstract/slime-bl.svg", :alt => "slime-bl", :class => "slime-bl", :draggable => "false") %>
@@ -75,3 +74,4 @@
         </div>
     </div>
 </div>
+</section>
