--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,10 +15,8 @@
  */
 
 /* Fonts */
-@font-face {
-    font-family: "Baloo Bhaijaan 2";
-    src: url('/assets/BalooBhaijaan2-VariableFont_wght');
-}
+
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@400;500;600;700;800&display=swap');
 
 /* Global Defaults and Variables */
 
