edited image routing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,7 @@
 /* Fonts */
 @font-face {
     font-family: "Baloo Bhaijaan 2";
-    src: url('/assets/BalooBhaijaan2-VariableFont_wght');
+    src: url('/assets/BalooBhaijaan2-VariableFont_wght.ttf');
 }
 
 /* Global Defaults and Variables */
