--- a/app/assets/stylesheets/projects.css
+++ b/app/assets/stylesheets/projects.css
@@ -87,27 +87,27 @@
 }
 
 #proj1 {
-    background-image: url('/assets/projects/website.svg');
+    background-image: url('/assets/website.svg');
 }
 
 #proj2 {
-    background-image: url('/assets/projects/pirate.svg');
+    background-image: url('/assets/pirate.svg');
 }
 
 #proj3 {
-    background-image: url('/assets/projects/calculator.svg');
+    background-image: url('/assets/calculator.svg');
 }
 
 #proj4 {
-    background-image: url('/assets/projects/recycle.svg');
+    background-image: url('/assets/recycle.svg');
 }
 
 #proj5 {
-    background-image: url('/assets/projects/robot.svg');
+    background-image: url('/assets/robot.svg');
 }
 
 #proj6 {
-    background-image: url('/assets/projects/additional.svg');
+    background-image: url('/assets/additional.svg');
 }
 
 .project-desc {
