--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,10 +17,16 @@
 
 
 /* Global Defaults and Variables */
+@font-face {
+    font-family: "Baloo Bhaijaan 2";
+    src: font-url("BalooBhaijaan2-VariableFont_wght.ttf");
+    font-weight: normal;
+    font-style: normal;
+}
+
 
 * {
     font-family: "Baloo Bhaijaan 2";
-    src: asset_url('fonts/BalooBhaijaan2-VariableFont_wght.ttf');
 }
 
 html {
