--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,7 +19,7 @@
 /* Global Defaults and Variables */
 @font-face {
     font-family: "Baloo Bhaijaan 2";
-    src: url("/assets/fonts/BalooBhaijaan2-VariableFont_wght.ttf");
+    src: url('<% font_path("BalooBhaijaan2-VariableFont_wght.ttf") %>') format('tff');
     font-weight: normal;
     font-style: normal;
 }
