made undraggable image for about page.

--- a/app/views/main/about.html.erb
+++ b/app/views/main/about.html.erb
@@ -3,7 +3,7 @@
 <!--Hero Section-->
 <div class = "about-hero">
     <div class="left-abt-hero">
-        <%= image_tag("about/hero.png", :alt => "Cyruss Allen Amante", :class => "abt-hero-image") %>
+        <%= image_tag("about/hero.png", :alt => "Cyruss Allen Amante", :class => "abt-hero-image", :draggable => "false") %>
     </div>
     <div class="right-abt-hero">
         <h1 class="hero-text">about me.</h1>
