updated projects and assets.

--- a/app/assets/stylesheets/projects.css
+++ b/app/assets/stylesheets/projects.css
@@ -87,23 +87,23 @@
 }
 
 #proj1 {
-    background-image: url('website.svg');
+    background-image: url('graphs.svg');
 }
 
 #proj2 {
-    background-image: url('pirate.svg');
+    background-image: url('website.svg');
 }
 
 #proj3 {
-    background-image: url('calculator.svg');
+    background-image: url('pirate.svg');
 }
 
 #proj4 {
-    background-image: url('recycle.svg');
+    background-image: url('calculator.svg');
 }
 
 #proj5 {
-    background-image: url('robot.svg');
+    background-image: url('recycle.svg');
 }
 
 #proj6 {
