--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
   <footer>
     <div class="footer">
       <h2 class="contact-text">contact me.</h2>
-      <p class="contact-email"><%= mail_to 'amantec@mcmaster.ca', "amantec@mcmaster.ca" %></p>
+      <p class="contact-email"><%= mail_to 'contact@cyrussamante.com', "contact@cyrussamante.com" %></p>
       <nav class="footer-nav">
         <ul class="footer-links">
           <li><%= link_to "home", root_path %></li>
