--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -9,8 +9,8 @@
             <h1 class="title">engineering</h1>
             <h1 class="title">student.</h1>
             <p>A third year software engineering student from McMaster University. Currently looking for opportunities such as 
-            internships/co-ops related to SWE or software development. Is defined as a team player with time-managment skills and strong work ethic.
-            Always willing to learn new skills and adapt to unprecidented situations.</p>
+            internships/co-ops related to SWE or software development. Is defined as a team player with time-management skills and strong work ethic.
+            Always willing to learn new skills and adapt to unprecedented situations.</p>
             <%= image_tag("abstract/square-grid.svg", :alt => "square-grid", :class => "square-grid", :draggable => "false") %>
         </div>
         <div class="right-hero">
